--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: calc(100vw - calc(100vw - 100%));
+            height: 100vh;
             background-color: black; /* ここで背景色を真っ黒に設定 */
             z-index: 9999; /* この要素を一番前に表示するためにz-indexを設定 */
             display: none;
@@ -52,8 +52,8 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: calc(100vw - calc(100vw - 100%));
+            height: 100vh;
             background-color:darkred; /* ここで背景色を真っ黒に設定 */
             z-index: 9995; /* この要素を一番前に表示するためにz-indexを設定 */
             display: none;
